Fix Strip ID font size on smaller screens

--- a/src/components/SellerAccount/SellerAccount.css
+++ b/src/components/SellerAccount/SellerAccount.css
@@ -31,5 +31,5 @@ h3 {
 
 #stripeID {
     color: rgb(19, 168, 19);
-    font-size: 25px;
+    /* font-size: 25px; */
 }
